# noobDB

./: .gitignore  CLAUDE.md  README.md  index.html  knip.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.browser.config.ts
.github/: dependabot.yml
.github/workflows/: audit.yml  automerge.yml  ci.yml  codeql.yml  coderabbit-fallback-approve.yml  dependabot-auto-merge.yml  e2e.yml  mutants.yml  pr-conflict.yml  release.yml  visual-baseline.yml
e2e/: tsconfig.e2e.json  wdio.conf.ts
e2e/specs/: sqlite-happy-path.e2e.ts
scripts/: bundle-size.mjs  ci-setup-sshd.sh
src/: App.css  App.tsx  accent.ts  brand.tsx  colorScale.ts  connectionOrder.ts  dangerousSql.ts  errorHints.ts  fkNavigation.ts  i18n.ts  keyboardNav.ts  main.tsx  motion.ts  notifications.ts  objectSearch.ts  onboarding.ts  pagination.ts  pinnedCompare.ts  planWatch.ts  profileIdentity.ts  queryNotify.ts  queryParams.ts  queryRunState.ts  reconnect.ts  resultDiff.ts  schemaTreeState.ts  semanticColors.ts  settings.ts  shortcutKeys.ts  shortcuts.ts  sqlScript.ts  streamPartialResult.ts  tabPersistence.ts  tabReorder.ts  tableQuickAccess.ts  theme.ts  themePresetPreview.ts  typeToConfirm.ts  updater.ts  updaterFormat.ts
src-tauri/: Cargo.toml  clippy.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml  mutants.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/db/: mod.txt
src-tauri/src/: error.rs  lib.rs  logs.rs  main.rs  state.rs
src-tauri/src/commands/: advisor.rs  connection.rs  diff.rs  dump.rs  export.rs  file.rs  history.rs  import.rs  inspector.rs  logs.rs  mod.rs  process.rs  profiles.rs  query.rs  schema.rs  server.rs  snippets.rs  ssh.rs  sync.rs
src-tauri/src/db/: advisor.rs  data_diff.rs  diff.rs  format.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  sync.rs  types.rs
src-tauri/src/history/: mod.rs  store.rs
src-tauri/src/profiles/: mod.rs  secrets.rs  store.rs
src-tauri/src/snippets/: mod.rs  store.rs
src-tauri/src/ssh/: auth.rs  handler.rs  known_hosts.rs  mod.rs  tunnel.rs
src-tauri/tests/: diff_sync_golden.rs  error_hint_golden.rs  error_kind_golden.rs  introspection_golden.rs  mysql_integration.rs  postgres_integration.rs  read_only_golden.rs  serde_schema_parity.rs  sqlite_integration.rs  ssh_integration.rs  sync_apply_integration.rs  timeout_cancel_pool.rs
src/__tests__/: ConfirmDialog.test.tsx  DangerousQueryDialog.test.tsx  ParameterInputModal.test.tsx  QueryBuilder.test.ts  QueryEditor.test.tsx  ResultGrid.test.tsx  ResultGrid.virtualized.test.tsx  Splitter.test.tsx  a11y.test.tsx  accent.test.ts  advisor.test.ts  backendError.test.ts  brand.test.ts  bulkEdit.test.ts  cellConditionalFormat.test.ts  cellEdit.test.ts  cellFormat.test.ts  cellTypeMeta.test.ts  chartData.test.ts  clipboard.test.ts  colorScale.test.ts  commandPalette.test.ts  connectionContext.test.ts  connectionForm.test.tsx  connectionList.test.tsx  connectionOrder.test.ts  createTable.test.ts  createTableModal.test.tsx  dangerousSql.test.ts  densityTokens.test.ts  dumpModal.test.tsx  elevation.test.ts  emptyState.test.tsx  erDiagram.test.ts  errorHintGolden.test.ts  errorHints.test.ts  errorKindGolden.test.ts  explainPlan.test.ts  explainPlanMultiDriver.test.ts  exportModal.test.tsx  (+84 more)
src/__tests__/browser/: a11y.browser.test.tsx  brand.browser.test.tsx  render.tsx  scenarios.browser.test.tsx  screens.browser.test.tsx  setup.browser.ts  tauriMock.ts  visual.browser.test.tsx
src/__tests__/fixtures/: componentFixtures.ts  errorHintVectors.json  errorKindVectors.json  readOnlySqlVectors.json  serdeResponseFixtures.json
src/api/: schemas.ts  tauri.ts
src/components/: AdvisorPanel.tsx  BatchResultsView.tsx  CellValueViewer.tsx  ChartView.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectionForm.tsx  ConnectionList.tsx  ContextMenu.tsx  CreateTableModal.tsx  DangerousQueryDialog.tsx  DumpModal.tsx  ERDiagramView.tsx  EmptyState.tsx  ExplainGraphView.tsx  ExplainViewer.tsx  ExportModal.tsx  HelpView.tsx  HistoryList.tsx  HostKeyMismatchDialog.tsx  Icon.tsx  ImageExportButton.tsx  ImportModal.tsx  KeybindingSettings.tsx  KnownHostsPanel.tsx  LanguageSwitcher.tsx  LoadingButton.tsx  Modal.tsx  MultiStateBadge.tsx  ObjectSearchModal.tsx  OnboardingTour.tsx  PaginationBar.tsx  ParameterInputModal.tsx  PinnedComparisonView.tsx  PivotView.tsx  PlanWatchPanel.tsx  PreflightBadge.tsx  PreviewGrid.tsx  ProcessListPanel.tsx  ProfileBadge.tsx  (+75 more)
