[package]
name = "noobdb"
version = "0.1.0"
description = "noobDB - Rust DB client (MySQL / PostgreSQL / SQLite) with SSH tunnel"
authors = ["noobDB contributors"]
edition = "2021"
rust-version = "1.77"

# staticlib / cdylib はモバイル (iOS/Android) 専用の生成物。本プロジェクトは
# デスクトップ専用 (tauri.conf.json の targets は nsis のみ) で、バイナリ
# (main.rs) は rlib をリンクするだけなので rlib に限定する。これにより
# リリースビルドで依存ツリー全体を含む cdylib(.dll) の最適化リンクが省ける。
# モバイル対応する場合は ["staticlib", "cdylib", "rlib"] に戻すこと。
[lib]
name = "noobdb_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# Async runtime. このクレートが実際に使う機能だけを列挙する (旧 "full" は未使用の
# signal / io-std / parking_lot なども含んでいた)。内訳: rt-multi-thread=spawn と
# Tauri ランタイム、sync=RwLock/OnceCell、time=timeout、net=SSH トンネルの
# TcpListener、io-util=copy_bidirectional/AsyncWriteExt、fs=エクスポートの async
# 読み書き、process=mysqldump 起動。`#[tokio::test]` 用の macros は dev-dependencies
# 側で有効化している。なお最終的な tokio の feature は依存グラフ全体の和になるため、
# Tauri/sqlx が要求する機能は引き続き有効になる。
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "io-util",
    "fs",
    "process",
] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures-util = "0.3"

# DB
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
    "json",
    "rust_decimal",
] }

# SSH
russh = "0.60"

# Secrets / config
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
directories = "6"

# Serialization & errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
uuid = { version = "1", features = ["v4"] }
data-encoding = "2"
csv = "1"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rand = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# dev ビルドのデバッグ情報を行テーブルのみに削減し、リンク時間と生成物サイズを
# 縮小する。バックトレースのファイル:行情報は保持される (変数や型の情報は落ちる)。
# 巨大な依存ツリーでは debuginfo の処理がリンク時間の大きな割合を占めるため効果的。
[profile.dev]
debug = "line-tables-only"
