[package]
name = "noobdb"
version = "0.1.0"
description = "noobDB - Rust DB client (MySQL / PostgreSQL / SQLite) with SSH tunnel"
authors = ["noobDB contributors"]
edition = "2021"
rust-version = "1.77"

# staticlib / cdylib はモバイル (iOS/Android) 専用の生成物。本プロジェクトは
# デスクトップ専用 (tauri.conf.json の targets は nsis のみ) で、バイナリ
# (main.rs) は rlib をリンクするだけなので rlib に限定する。これにより
# リリースビルドで依存ツリー全体を含む cdylib(.dll) の最適化リンクが省ける。
# モバイル対応する場合は ["staticlib", "cdylib", "rlib"] に戻すこと。
[lib]
name = "noobdb_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# Async runtime. 本体コードが実際に使う tokio API を監査し、そこから必要な feature を
# すべて明示する (旧 "full" は未使用の signal / io-std / parking_lot なども含んでいた)。
# 内訳: rt=tokio::spawn/tokio::task、rt-multi-thread=マルチスレッドランタイム、
# sync=RwLock/OnceCell、time=timeout、net=SSH トンネルの TcpListener、
# io-util=copy_bidirectional/AsyncWriteExt、fs=エクスポートの async 読み書き、
# process=mysqldump 起動。rt は rt-multi-thread が必ず内包するが、tokio::spawn /
# tokio::task の依存先を自明にするため明示的に併記している。`#[tokio::test]` 用の
# macros は本体では未使用で、dev-dependencies 側でのみ有効化する。
#
# このリストは本体ビルドに必要な feature を自己充足的に満たしており、Tauri/sqlx が
# 推移的に有効化する feature には依存していない (最終的な feature は依存グラフ全体の
# 和になるため、Tauri/sqlx が要求する機能も結果的に有効になるが、本体はそれを当てに
# しない)。本体で新しい tokio API を使い始めたときは、対応する feature をここへ追加
# すること。
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "io-util",
    "fs",
    "process",
] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures-util = "0.3"

# DB
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
    "json",
    "rust_decimal",
] }

# SSH
russh = "0.60"

# Secrets / config
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
directories = "6"

# Serialization & errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
uuid = { version = "1", features = ["v4"] }
data-encoding = "2"
csv = "1"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rand = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# dev ビルドのデバッグ情報を行テーブルのみに削減し、リンク時間と生成物サイズを
# 縮小する。バックトレースのファイル:行情報は保持される (変数や型の情報は落ちる)。
# 巨大な依存ツリーでは debuginfo の処理がリンク時間の大きな割合を占めるため効果的。
[profile.dev]
debug = "line-tables-only"
