[package]
name = "noobdb"
version = "0.1.0"
description = "noobDB - Rust DB client (MySQL / PostgreSQL / SQLite) with SSH tunnel"
authors = ["noobDB contributors"]
edition = "2021"
rust-version = "1.77"
# 配布専用のデスクトップアプリで crates.io へ公開しないため publish = false。
# cargo-deny のライセンス検査でも自クレートを非公開扱いで除外できる。
publish = false

# staticlib / cdylib はモバイル (iOS/Android) 専用の生成物。本プロジェクトは
# デスクトップ専用 (tauri.conf.json の targets は nsis のみ) で、バイナリ
# (main.rs) は rlib をリンクするだけなので rlib に限定する。これにより
# リリースビルドで依存ツリー全体を含む cdylib(.dll) の最適化リンクが省ける。
# モバイル対応する場合は ["staticlib", "cdylib", "rlib"] に戻すこと。
[lib]
name = "noobdb_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# Async runtime. 本体コードが実際に使う tokio API を監査し、そこから必要な feature を
# すべて明示する (旧 "full" は未使用の signal / io-std / parking_lot なども含んでいた)。
# 内訳: rt=tokio::spawn/tokio::task、rt-multi-thread=マルチスレッドランタイム、
# sync=RwLock/OnceCell、time=timeout、net=SSH トンネルの TcpListener、
# io-util=copy_bidirectional/AsyncWriteExt、fs=エクスポートの async 読み書き、
# process=mysqldump 起動。rt は rt-multi-thread が必ず内包するが、tokio::spawn /
# tokio::task の依存先を自明にするため明示的に併記している。`#[tokio::test]` 用の
# macros は本体では未使用で、dev-dependencies 側でのみ有効化する。
#
# このリストは本体ビルドに必要な feature を自己充足的に満たしており、Tauri/sqlx が
# 推移的に有効化する feature には依存していない (最終的な feature は依存グラフ全体の
# 和になるため、Tauri/sqlx が要求する機能も結果的に有効になるが、本体はそれを当てに
# しない)。本体で新しい tokio API を使い始めたときは、対応する feature をここへ追加
# すること。
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "io-util",
    "fs",
    "process",
] }
# futures-util は 3 ドライバの `StreamExt` / `stream.next().await`
# (db/{mysql,postgres,sqlite}.rs) のみで使う。default features (std など) は
# 不要で、`StreamExt::next` は default-features = false でも利用できるため
# 無効化してビルド対象を絞る (#276)。
futures-util = { version = "0.3", default-features = false }

# DB
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
    "json",
    "rust_decimal",
] }

# SSH
russh = "0.60"

# Secrets / config
# keyring のネイティブバックエンドはターゲット OS ごとに分け、ビルド中のターゲットに
# 不要なバックエンド (とその依存) を依存グラフから外す (#273)。モバイル対応や別 OS の
# サポートを足す場合は対応する [target.*] ブロックを追加すること。
directories = "6"

# Serialization & errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
data-encoding = "2"
csv = "1"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rand = "0.10"

# keyring のネイティブバックエンドはターゲット OS ごとに有効化する。これにより
# ビルド中のターゲットに不要なバックエンド (とその推移依存) が依存グラフから外れる。
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
# SQL 安全網関数 (is_read_only_sql / apply_auto_limit) のプロパティベーステスト用。
# 手書きサンプルでは思いつきにくいエッジケース (コメント/文字列リテラルに隠した
# キーワード等) を自動探索し、安全網のバイパスを継続的に検出する (#355)。
proptest = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# dev ビルドの debuginfo を行テーブルのみに削減し、リンク時間を縮める。巨大な
# 依存ツリーでは debuginfo の処理がリンク時間の大きな割合を占めるため、dev ビルドの
# 反復が速くなる。バックトレースのファイル:行情報は保持される (変数や型の情報は落ちる)。
[profile.dev]
debug = "line-tables-only"

# リリースバイナリ (NSIS で配布する Windows 実行ファイル) の実行時性能を優先する
# 設定。このプロファイルは `tauri build` (release.yml) のリリースビルドにのみ効き、
# CI の clippy / nextest / fmt や日常の dev ビルドには影響しない (それらは dev /
# test プロファイル)。処理の大半は DB I/O 待ちだが、大きな結果セットのデコードなど
# 数少ない CPU バウンド経路のスループットをこのプロファイルで最大化する。
#
# panic は既定の "unwind" を維持する。"abort" は tokio タスク内のパニックがアプリ
# 全体を巻き込んで落とすためロバスト性が下がる (各ドライバのデコード経路などを
# 点検したうえでなければ採用しない)。
[profile.release]
opt-level = 3        # 実行時スループット優先
lto = "fat"          # クレート跨ぎの最適化を最大化 (リンク時間とのトレードオフ)
codegen-units = 1    # 最適化単位を 1 にまとめ最大限の最適化 (リリースビルド時間とのトレードオフ)
